--- a/string_list.ipynb
+++ b/string_list.ipynb
@@ -540,6 +540,34 @@
    ]
   },
   {
+   "source": [
+    "## 列表判空"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "empty\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = []\n",
+    "if nums: # 在列表至少包含一个元素时为True\n",
+    "    print(\"not empty\")\n",
+    "else:\n",
+    "    print(\"empty\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
