update some note.

--- a/build_in_functions.ipynb
+++ b/build_in_functions.ipynb
@@ -318,6 +318,123 @@
    ]
   },
   {
+   "source": [
+    "## `hex(a)` `oct(x)`\n",
+    "将整数a转换为16/8进制字符串"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0x64\n0o144\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(hex(100))\n",
+    "print(oct(100))"
+   ]
+  },
+  {
+   "source": [
+    "## `modf(float)`\n",
+    "返回浮点数的小数部分与整数部分。整数部分表示为浮点数。"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(0.5, 1.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "print(math.modf(1.5))"
+   ]
+  },
+  {
+   "source": [
+    "## Python随机数函数\n",
+    "`choice(sep)` 从序列的元素中随机挑选一个元素，比如`random.choice(range(10))`，从0到9中随机挑选一个整数。\n",
+    "\n",
+    "`randrange ([start,] stop [,step])` 从指定范围返回指定递增基数集合中的一个随机数，基数默认值为1。\n",
+    "\n",
+    "`random()` 返回[0, 1)范围内随机数\n",
+    "\n",
+    "`shuffle(lst)` 将序列中所有元素随机排序, 修改了原序列。"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "6\n5\n0.17449591239831674\n[5, 3, 1, 2, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "x = random.choice(range(10))\n",
+    "print(x)\n",
+    "\n",
+    "y = random.randrange(1, 10, 2)\n",
+    "print(y)\n",
+    "\n",
+    "z = random.random()\n",
+    "print(z)\n",
+    "\n",
+    "lst = [1, 2, 3, 4, 5]\n",
+    "random.shuffle(lst)\n",
+    "print(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "9223372036854775807\n<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "# Python3中int既是其他语言中的long, sys.maxsize表示LONG_MAX\n",
+    "x: int\n",
+    "x = sys.maxsize\n",
+    "print(x)\n",
+    "print(type(x))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
