--- a/string_list.ipynb
+++ b/string_list.ipynb
@@ -196,29 +196,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[1, 4, 2, 5, 3]\n[1, 2, 3, 4, 5]\n[5, 4, 3, 2, 1]\n"
+      "[1, 2, 3, 4, 5]\n"
      ]
     }
    ],
    "source": [
+    "import functools\n",
     "nums = [1, 4, 2, 5, 3]\n",
     "# nums.sort() # 修改了原数组，不可恢复\n",
     "# print(nums)\n",
     "# nums.sort(reverse=True) # 倒序\n",
     "# print(nums)\n",
     "\n",
-    "sorted_nums = sorted(nums) # 不修改原数据\n",
-    "reverse_sorted_nums = sorted(nums, reverse=True)\n",
-    "print(nums)\n",
-    "print(sorted_nums)\n",
-    "print(reverse_sorted_nums)"
+    "# sorted_nums = sorted(nums) # 不修改原数据\n",
+    "# reverse_sorted_nums = sorted(nums, reverse=True)\n",
+    "# print(nums)\n",
+    "# print(sorted_nums)\n",
+    "# print(reverse_sorted_nums)\n",
+    "\n",
+    "# 自定义compare function\n",
+    "def compare(A, B): # 名字可以随便取，不一定得是“compare\"\n",
+    "\tif A < B:\n",
+    "\t\treturn -1 # 表示此种情况下A排在B左边，其实只要return negative value就行\n",
+    "\telif A > B:\n",
+    "\t\treturn 1 # 表示此种情况下A排在B右边，其实只要return positive value就行\n",
+    "\telse:\n",
+    "\t\treturn 0 # 表示相等，就按照循环访问的顺序排\n",
+    "nums.sort(key=functools.cmp_to_key(compare))\n",
+    "print(nums)"
    ]
   },
   {
@@ -569,6 +581,145 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[2, 4]\n2\n1\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [1, 2, 3, 4, 5]\n",
+    "print(nums[1:5:2]) # [1, 5)步长为2的切片\n",
+    "print(nums.index(3))\n",
+    "print(nums.count(2)) # 2在nums中出现的次数"
+   ]
+  },
+  {
+   "source": [
+    "### `s.index(x[, i[, j]])`\n",
+    "`x` 在 `s` 中首次出现项的索引号（索引号在 `i` 或其后且在 `j` 之前）\n",
+    "\n",
+    "不是所有实现都支持传入额外参数 `i` 和 `j`。 这两个参数允许高效地搜索序列的子序列。 传入这两个额外参数大致相当于使用 `s[i:j].index(x)`，但是不会复制任何数据，并且返回的索引是相对于序列的开头而非切片的开头。"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[], [], []]\n[[0], [0], [0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lists = [[]] * 3\n",
+    "print(lists)\n",
+    "lists[0].append(0)\n",
+    "print(lists)"
+   ]
+  },
+  {
+   "source": [
+    "## 注意：使用 `*` 对列表执行重复操作并不是创建副本，它只是创建现有对象的引用。\n",
+    "具体的原因在于 `[[]]` 是一个包含了一个空列表的单元素列表，所以 `[[]] * 3` 结果中的三个元素都是对这一个空列表的引用。修改 lists 中的任何一个元素实际上都是对这一个空列表的修改。 你可以用以下方式创建以不同列表为元素的列表:"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[], [], []]\n[[0], [], []]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lists = [[] for i in range(3)]\n",
+    "print(lists)\n",
+    "lists[0].append(0)\n",
+    "print(lists)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-48f637a909a2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "t = (1, 2, 3) # tuple 不可变序列\n",
+    "print(t[0])\n",
+    "t[0] = 1 # 'tuple' object does not support item assignment"
+   ]
+  },
+  {
+   "source": [
+    "`s[i:j] = t` 将 s 从 i 到 j 的切片替换为可迭代对象 t 的内容\n",
+    "\n",
+    "`del s[i:j]` 等同于 `s[i:j] = []`"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 0, 0, 4, 1, 1]\n[1, 0, 0, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1, 2, 3, 4, 5]\n",
+    "l[1:3] = [0, 0]\n",
+    "l[4:5] = [1, 1]\n",
+    "print(l) \n",
+    "del l[4:]\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -590,7 +741,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.5"
   },
   "toc-autonumbering": true,
   "toc-showcode": true,
