--- a/build_in_functions.ipynb
+++ b/build_in_functions.ipynb
@@ -10,7 +10,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.5"
   },
   "orig_nbformat": 2,
   "kernelspec": {
@@ -432,6 +432,24 @@
     "x = sys.maxsize\n",
     "print(x)\n",
     "print(type(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0, 0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [0] * 4\n",
+    "print(str(a))"
    ]
   },
   {
